See xref:metrics.adoc#micrometer-observation[Micrometer Observation] for more information.

[[x6.5-mqtt-changes]]
== Optional Paho MQTT Dependencies

The `org.eclipse.paho:org.eclipse.paho.client.mqttv3` dependency for `spring-integration-mqtt` is now also optional as `org.eclipse.paho:org.eclipse.paho.mqttv5.client` always was.
See xref:mqtt.adoc[MQTT Support] for more information.

[[x6.5-kafka-changes]]
== Apache Kafka support Changes

The `KafkaMessageSource` and `KafkaMessageDrivenChannelAdapter` now generate `MessageHeaders.ID` and `MessageHeaders.TIMESTAMP` headers by default as the rest of Spring Integration channel adapters.
The behavior can be restored to the previous with injection of the `MessagingMessageConverter` with default settings.
See xref:kafka.adoc[Apache Kafka Support] for more information.

[[x6.5-file-filter-changes]]
== The Recent File Filter Support

The `AbstractRecentFileListFilter` strategy has been introduced to accept only those files which are not old enough according to the provided `age`.
The respective implementations are provided: `RecentFileListFilter`, `FtpRecentFileListFilter`, `SftpRecentFileListFilter` and `SmbRecentFileListFilter`.
See xref:file/reading.adoc[Reading Files] for more information.

[[x6.5-hazelcast-changes]]
== Hazelcast Support Deprecation

The `spring-integration-hazelcast` module has been deprecated due to Hazelcast migration to Enterprise Edition.
See xref:hazelcast.adoc[Hazelcast Support] for more information.

[[x6.5-jdbc-changes]]
== JDBC Support

The `BeanPropertySqlParameterSourceFactory` uses now internally the `MapSqlParameterSource` if provided input is a `Map`.
Also, `JdbcMessageHandler` exposes a `usePayloadAsParameterSource` flag to allow to deal with parameter source only against message payload.
That's where the mentioned `MapSqlParameterSource` comes useful for request messages with map payloads.
See xref:jdbc.adoc[JDBC Support] for more information.